[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/bullet_dot44.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/bulletNormal.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 2 )

[node name="Bullet" type="KinematicBody2D" groups=[
"bullets",
]]
collision_layer = 128
collision_mask = 8194
script = ExtResource( 2 )

[node name="bullet" type="Area2D" parent="." groups=[
"bullets",
]]
pause_mode = 1
collision_layer = 128
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="bullet"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.588438, 0.476204 )

[node name="bullettrail" type="CPUParticles2D" parent="."]
position = Vector2( -5.543, 0 )
rotation = 1.5708
amount = 60
lifetime = 2.0
speed_scale = 3.0
fixed_fps = 60
gravity = Vector2( 0, 90 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="bullet" to="." method="_on_bullet_body_entered"]
[connection signal="body_exited" from="bullet" to="." method="_on_bullet_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
